fixed UI overlap for added cart message

--- a/client/src/app/item-list/item-list.component.scss
+++ b/client/src/app/item-list/item-list.component.scss
@@ -181,7 +181,7 @@ input[type="checkbox"] { accent-color: brown; }
     padding: 5vh 2.25vw;
     position: fixed;
     inset: 4% 3% auto auto;
-    width: 20vw;
+    width: fit-content;
     background: white;
     box-shadow: 1px 0 3px;
     border-left: 5px solid brown;
@@ -191,8 +191,8 @@ input[type="checkbox"] { accent-color: brown; }
 }
 
 .add-msg-text {
-    margin-left: 5%;
-    font-size: clamp(1rem, 1vw, 1.5rem);
+    margin-left: 10%;
+    font-size: clamp(0.875rem, 1.25vw, 1.25rem);
     font-family: 'Playfair Display', serif; 
     font-weight: 500;
     letter-spacing: 0.75px;
@@ -204,7 +204,8 @@ input[type="checkbox"] { accent-color: brown; }
     0% { transform: translateY(50%); opacity: 1; }
     25% { transform: translateY(0); opacity: 1; }
     75% { opacity: 1; }
-    100% { opacity: 0; }
+    99% { opacity: 0; width: fit-content; padding: 5vh 2.25vw; border-left: 5px solid brown; }
+    100% { width: 0; padding: 0; border-left: 0; }
 }
 
 @media (max-width: 70rem) { .item-list { grid-template-columns: 33% 33%; row-gap: 2.5rem; } }
@@ -223,5 +224,4 @@ input[type="checkbox"] { accent-color: brown; }
     .pagination { grid-column: 1 / 3; padding: 0; }
     .page { padding: 0.5rem 0.75rem; }
     .pagination > button { padding: 0.5rem; }
-    .add-msg.show { width: 60vw; }
 }
